force-app/main/default/objects/Movie__c/fields/Date_Premiere__c.field-meta.xml
<CustomField>
    <fullName>Date_Premiere__c</fullName>
    <label>Date Premiere</label>
    <required>true</required>
    <type>Date</type>
</CustomField>