force-app/main/default/objects/Movie__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <label>Director</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>