force-app/main/default/objects/Movie__c/fields/Image_Preview__c.field-meta.xml
<CustomField>
    <fullName>Image_Preview__c</fullName>
    <label>Image Preview</label>
    <type>Url</type>
</CustomField>