force-app/main/default/objects/Movie__c/fields/Languages__c.field-meta.xml
<CustomField>
    <fullName>Languages__c</fullName>
    <label>Languages</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spanish</fullName>
                <default>true</default>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>