force-app/main/default/objects/Movie__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Muy Buena</fullName>
            </value>
            <value>
                <fullName>Buena</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Mala</fullName>
            </value>
            <value>
                <fullName>Muy Mala</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>